2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c: Remove few leftover includes.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Move stat () and device mode checking into OS-dependent files as
	long as performance doesn't suffer.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Split make_system_path_relative_to_its_root into separate file
	relpath.c from getroot.c as it's common between unix and haiku
	but otherwise haiku doesn't use any functions from unix getroot.c.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/aros/hostdisk.c (grub_util_is_directory):
	New function.
	(grub_util_is_special_file): Likewise.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/unix/getroot.c: Move exec functions to ...
	* osdep/unix/exec.c: ... here. Add few additional exec_* variants.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/libgcrypt_wrap/cipher_wrap.h: Define size_t to
	grub_size_t. This fixes the case when size_t mismatches grub_size_t.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimagexx.c (make_reloc_section): Fix memory leak.
	(load_image): Likewise.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-render-label.c: Move backend part to ...
	* util/render-label.c: ... here.

2013-10-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/random.c: Use unix/random.c on haiku. Haiku uses
	yarrow (by B. Schneier et al) for its /dev/urandom (similar to FreeBSD).

2013-10-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/generic/blocklist.c: Add missing include to string.h.

2013-10-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/efi/efidisk.c (grub_efidisk_get_device_name): Handle
	CD-ROM in case when it's declared as having subpartitions.

2013-10-18  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't add -lm on haiku.
