@@ -14,6 +14,8 @@
 #include "windows/getroot.c"
 #elif defined(__AROS__)
 #include "aros/getroot.c"
+#elif defined (__HAIKU__)
+#include "haiku/getroot.c"
 #else
 # warning "No getroot OS-specific functions is available for your system. Device detection may not work properly."
 #include "basic/getroot.c"
