@@ -40,7 +40,7 @@
 #include <grub/cryptodisk.h>
 #include <grub/i18n.h>
 
-#if !defined (__MINGW32__) && !defined (__CYGWIN__) && !defined (__AROS__)
+#if !defined (__MINGW32__) && !defined (__CYGWIN__) && !defined (__AROS__) && !defined (__HAIKU__)
 
 #ifdef __linux__
 #include <sys/ioctl.h>         /* ioctl */
